link to wortoruqe, solve negative z-index bug

--- a/update/buildingBaseStyle.css
+++ b/update/buildingBaseStyle.css
@@ -32,7 +32,6 @@
   left: 21%;
   transform: translate(0, -50%);
   color: lightgray;
-  z-index: 6;
 }
 
 #beforeSlot{
